Composable roles within services - NTP
Add NTP as a composable service.

Also, the scope of this patch is to serve as
basis for the blueprint related to the
composable services walkthrough.

This will be the use case documented.

The puppet manifests updated to remove the current
configuration for NTP is also added.

Change-Id: I1d3d6229d53f48c380e6a775a7c50de8715fe949

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -221,6 +221,7 @@ parameters:
     description: The password for the nova service account, used by nova-api.
     type: string
     hidden: true
+  #TODO(ccamacho): Remove after landing Ntp in all roles
   NtpServer:
     default: ''
     description: Comma-separated list of ntp servers
@@ -594,6 +595,7 @@ parameters:
       - OS::TripleO::Services::NovaScheduler
       - OS::TripleO::Services::NovaConsoleauth
       - OS::TripleO::Services::NovaVncproxy
+      - OS::TripleO::Services::Ntp
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Controllers.
@@ -867,7 +869,6 @@ resources:
           NeutronMetadataProxySharedSecret: {get_param: NeutronMetadataProxySharedSecret}
           NovaIPv6: {get_param: NovaIPv6}
           NovaPassword: {get_param: NovaPassword}
-          NtpServer: {get_param: NtpServer}
           PcsdPassword: {get_resource: PcsdPassword}
           PublicVirtualInterface: {get_param: PublicVirtualInterface}
           RabbitPassword: {get_param: RabbitPassword}
