Fixes ovs bonding option
Default ovs bonding options parameter BondInterfaceOvsOptions was wrongly set to "mode=active-backup" which makes os-net-config fail. This fix changes it to "bond_mode=active-backup".

Change-Id: If3eaac6558c1a15ac09b198f90f05f1a77cf794b
Closes-Bug: #1576137

--- a/environments/network-environment.yaml
+++ b/environments/network-environment.yaml
@@ -47,4 +47,4 @@ parameter_defaults:
   # Set to empty string to enable multiple external networks or VLANs
   NeutronExternalNetworkBridge: "''"
   # Customize bonding options, e.g. "mode=4 lacp_rate=1 updelay=1000 miimon=100"
-  BondInterfaceOvsOptions: "mode=active-backup"
+  BondInterfaceOvsOptions: "bond_mode=active-backup"
