--- a/puppet/ceph-cluster-config.yaml
+++ b/puppet/ceph-cluster-config.yaml
@@ -109,7 +109,7 @@ resources:
                       GLANCE_POOL: {get_param: GlanceRbdPoolName}
                       GNOCCHI_POOL: {get_param: GnocchiRbdPoolName}
                 nova::compute::rbd::libvirt_images_rbd_pool: {get_param: NovaRbdPoolName}
-                cinder_rbd_pool_name: {get_param: CinderRbdPoolName}
+                tripleo::profile::base::cinder::volume::rbd::cinder_rbd_pool_name: {get_param: CinderRbdPoolName}
                 glance::backend::rbd::rbd_store_pool: {get_param: GlanceRbdPoolName}
                 gnocchi::storage::ceph::ceph_pool: {get_param: GnocchiRbdPoolName}
                 gnocchi::storage::ceph::ceph_username: {get_param: CephClientUserName}
@@ -127,7 +127,7 @@ resources:
                     - 'client'
                     - {get_param: CephClientUserName}
                     - 'keyring'
-                ceph_client_user_name: {get_param: CephClientUserName}
+                tripleo::profile::base::cinder::volume::rbd::cinder_rbd_user_name: {get_param: CephClientUserName}
                 ceph_pools:
                   - {get_param: CinderRbdPoolName}
                   - {get_param: NovaRbdPoolName}
