--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -47,56 +47,6 @@ parameters:
     default: 0
     description: Number of workers for Ceilometer service.
     type: number
-  CinderEnableDBPurge:
-    default: true
-    description: |
-      Whether to create cron job for purging soft deleted rows in Cinder database.
-    type: boolean
-  CinderEnableNfsBackend:
-    default: false
-    description: Whether to enable or not the NFS backend for Cinder
-    type: boolean
-  CinderEnableIscsiBackend:
-    default: true
-    description: Whether to enable or not the Iscsi backend for Cinder
-    type: boolean
-  CinderEnableRbdBackend:
-    default: false
-    description: Whether to enable or not the Rbd backend for Cinder
-    type: boolean
-  CinderISCSIHelper:
-    default: lioadm
-    description: The iSCSI helper to use with cinder.
-    type: string
-  CinderLVMLoopDeviceSize:
-    default: 10280
-    description: The size of the loopback file used by the cinder LVM driver.
-    type: number
-  CinderNfsMountOptions:
-    default: ''
-    description: >
-      Mount options for NFS mounts used by Cinder NFS backend. Effective
-      when CinderEnableNfsBackend is true.
-    type: string
-  CinderNfsServers:
-    default: ''
-    description: >
-      NFS servers used by Cinder NFS backend. Effective when
-      CinderEnableNfsBackend is true.
-    type: comma_delimited_list
-  CinderPassword:
-    description: The password for the cinder service and db account, used by cinder-api.
-    type: string
-    hidden: true
-  CinderBackendConfig:
-    default: {}
-    description: Contains parameters to configure Cinder backends. Typically
-                 set via parameter_defaults in the resource registry.
-    type: json
-  CinderWorkers:
-    default: 0
-    description: Number of workers for Cinder service.
-    type: number
   controllerExtraConfig:
     default: {}
     description: |
@@ -807,7 +757,6 @@ resources:
       input_values:
         bootstack_nodeid: {get_attr: [Controller, name]}
         ceilometer_workers: {get_param: CeilometerWorkers}
-        cinder_workers: {get_param: CinderWorkers}
         nova_workers: {get_param: NovaWorkers}
         neutron_workers: {get_param: NeutronWorkers}
         neutron_enable_tunneling: {get_param: NeutronEnableTunnelling}
@@ -821,29 +770,6 @@ resources:
         admin_password: {get_param: AdminPassword}
         neutron_public_interface_ip: {get_param: NeutronPublicInterfaceIP}
         debug: {get_param: Debug}
-        cinder_enable_db_purge: {get_param: CinderEnableDBPurge}
-        cinder_enable_nfs_backend: {get_param: CinderEnableNfsBackend}
-        cinder_enable_rbd_backend: {get_param: CinderEnableRbdBackend}
-        cinder_nfs_mount_options: {get_param: CinderNfsMountOptions}
-        cinder_nfs_servers:
-          str_replace:
-            template: SERVERS
-            params:
-              SERVERS: {get_param: CinderNfsServers}
-        cinder_lvm_loop_device_size: {get_param: CinderLVMLoopDeviceSize}
-        cinder_password: {get_param: CinderPassword}
-        cinder_enable_iscsi_backend: {get_param: CinderEnableIscsiBackend}
-        cinder_iscsi_helper: {get_param: CinderISCSIHelper}
-        cinder_backend_config: {get_param: CinderBackendConfig}
-        cinder_dsn:
-          list_join:
-            - ''
-            - - {get_param: [EndpointMap, MysqlInternal, protocol]}
-              - '://cinder:'
-              - {get_param: CinderPassword}
-              - '@'
-              - {get_param: [EndpointMap, MysqlInternal, host]}
-              - '/cinder'
         cinder_public_url: {get_param: [EndpointMap, CinderPublic, uri]}
         cinder_internal_url: {get_param: [EndpointMap, CinderInternal, uri]}
         cinder_admin_url: {get_param: [EndpointMap, CinderAdmin, uri]}
@@ -1179,28 +1105,8 @@ resources:
                 swift_mount_check: {get_input: swift_mount_check}
 
                 # Cinder
-                cinder_enable_db_purge: {get_input: cinder_enable_db_purge}
-                cinder_enable_nfs_backend: {get_input: cinder_enable_nfs_backend}
-                cinder_enable_rbd_backend: {get_input: cinder_enable_rbd_backend}
-                cinder_nfs_mount_options: {get_input: cinder_nfs_mount_options}
-                cinder_nfs_servers: {get_input: cinder_nfs_servers}
-                cinder_lvm_loop_device_size: {get_input: cinder_lvm_loop_device_size}
-                cinder_iscsi_helper: {get_input: cinder_iscsi_helper}
-                cinder_iscsi_ip_address: {get_input: cinder_iscsi_network}
-                cinder::database_connection: {get_input: cinder_dsn}
-                cinder::api::keystone_password: {get_input: cinder_password}
-                cinder::api::auth_uri: {get_input: keystone_auth_uri}
-                cinder::api::identity_uri: {get_input: keystone_identity_uri}
+                tripleo::profile::base::cinder::volume::iscsi::cinder_iscsi_address: {get_input: cinder_iscsi_network}
                 cinder::api::bind_host: {get_input: cinder_api_network}
-                cinder::rabbit_userid: {get_input: rabbit_username}
-                cinder::rabbit_password: {get_input: rabbit_password}
-                cinder::rabbit_use_ssl: {get_input: rabbit_client_use_ssl}
-                cinder::rabbit_port: {get_input: rabbit_client_port}
-                cinder::debug: {get_input: debug}
-                cinder_enable_iscsi_backend: {get_input: cinder_enable_iscsi_backend}
-                cinder::glance::glance_api_servers: {get_input: glance_api_servers}
-                cinder_backend_config: {get_input: CinderBackendConfig}
-                cinder::db::mysql::password: {get_input: cinder_password}
                 cinder::keystone::auth::public_url: {get_input: cinder_public_url }
                 cinder::keystone::auth::internal_url: {get_input: cinder_internal_url }
                 cinder::keystone::auth::admin_url: {get_input: cinder_admin_url }
