--- a/puppet/extraconfig/pre_deploy/controller/cinder-netapp.yaml
+++ b/puppet/extraconfig/pre_deploy/controller/cinder-netapp.yaml
@@ -87,7 +87,7 @@ resources:
           datafiles:
             cinder_netapp_data:
               mapped_data:
-                cinder_enable_netapp_backend: {get_input: EnableNetappBackend}
+                tripleo::profile::base::cinder::volume::cinder_enable_netapp_backend: {get_input: EnableNetappBackend}
                 cinder::backend::netapp::title: {get_input: NetappBackendName}
                 cinder::backend::netapp::netapp_login: {get_input: NetappLogin}
                 cinder::backend::netapp::netapp_password: {get_input: NetappPassword}
