--- a/environments/puppet-pacemaker.yaml
+++ b/environments/puppet-pacemaker.yaml
@@ -9,6 +9,9 @@ resource_registry:
   # NOTE: For now we will need to specify overrides to all services
   # which use pacemaker. In the future (with upcoming HA light work) this
   # list will hopefully be much smaller however.
+  OS::TripleO::Services::CinderApi: ../puppet/services/pacemaker/cinder-api.yaml
+  OS::TripleO::Services::CinderScheduler: ../puppet/services/pacemaker/cinder-scheduler.yaml
+  OS::TripleO::Services::CinderVolume: ../puppet/services/pacemaker/cinder-volume.yaml
   OS::TripleO::Services::Keystone: ../puppet/services/pacemaker/keystone.yaml
   OS::TripleO::Services::GlanceApi: ../puppet/services/pacemaker/glance-api.yaml
   OS::TripleO::Services::GlanceRegistry: ../puppet/services/pacemaker/glance-registry.yaml
