--- a/puppet/extraconfig/ceph/ceph-external-config.yaml
+++ b/puppet/extraconfig/ceph/ceph-external-config.yaml
@@ -83,7 +83,7 @@ resources:
                       GNOCCHI_POOL: {get_param: GnocchiRbdPoolName}
                 ceph::profile::params::ms_bind_ipv6: {get_param: CephIPv6}
                 nova::compute::rbd::libvirt_images_rbd_pool: {get_param: NovaRbdPoolName}
-                cinder_rbd_pool_name: {get_param: CinderRbdPoolName}
+                tripleo::profile::base::cinder::volume::rbd::cinder_rbd_pool_name: {get_param: CinderRbdPoolName}
                 glance::backend::rbd::rbd_store_pool: {get_param: GlanceRbdPoolName}
                 gnocchi::storage::ceph::ceph_pool: {get_param: GnocchiRbdPoolName}
                 gnocchi::storage::ceph::ceph_username: {get_param: CephClientUserName}
@@ -101,7 +101,7 @@ resources:
                     - 'client'
                     - {get_param: CephClientUserName}
                     - 'keyring'
-                ceph_client_user_name: {get_param: CephClientUserName}
+                tripleo::profile::base::cinder::volume::rbd::cinder_rbd_user_name: {get_param: CephClientUserName}
                 ceph_pools:
                   - {get_param: CinderRbdPoolName}
                   - {get_param: NovaRbdPoolName}
