--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -534,14 +534,6 @@ parameters:
     default: 5672
     description: Set rabbit subscriber port, change this if using SSL
     type: number
-  RabbitFDLimit:
-    default: 16384
-    description: Configures RabbitMQ FD limit
-    type: string
-  RabbitIPv6:
-    default: false
-    description: Enable IPv6 in RabbitMQ
-    type: boolean
   RedisPassword:
     type: string
     description: The password to access the Redis service
@@ -1108,8 +1100,6 @@ resources:
         rabbit_cookie: {get_param: RabbitCookie}
         rabbit_client_use_ssl: {get_param: RabbitClientUseSSL}
         rabbit_client_port: {get_param: RabbitClientPort}
-        rabbit_ipv6: {get_param: RabbitIPv6}
-        rabbit_fd_limit: {get_param: RabbitFDLimit}
         mongodb_no_journal: {get_param: MongoDbNoJournal}
         mongodb_ipv6: {get_param: MongoDbIPv6}
         ntp_servers: {get_param: NtpServer}
@@ -1557,14 +1547,9 @@ resources:
                 sahara::keystone::auth::admin_url: {get_input: sahara_admin_url }
                 sahara::keystone::auth::password: {get_input: sahara_password }
                 sahara::keystone::auth::region: {get_input: keystone_region}
-
-                # Rabbit
+                # RabbitMQ
                 rabbitmq::node_ip_address: {get_input: rabbitmq_network}
                 rabbitmq::erlang_cookie: {get_input: rabbit_cookie}
-                rabbitmq::file_limit: {get_input: rabbit_fd_limit}
-                rabbitmq::default_user: {get_input: rabbit_username}
-                rabbitmq::default_pass: {get_input: rabbit_password}
-                rabbit_ipv6: {get_input: rabbit_ipv6}
                 # Redis
                 redis::bind: {get_input: redis_network}
                 redis::requirepass: {get_input: redis_password}
