Composable roles within services - Redis
Co-Authored-By: Carlos Camacho <ccamacho@redhat.com>

Change-Id: I0d9332f7f4f9116c5435d338a9c35d4fb3f512c6
Implements: blueprint composable-services-within-roles
Depends-On: I60493a3aa64e5136b763e8e2084d728f5f812f8a

--- a/environments/puppet-pacemaker.yaml
+++ b/environments/puppet-pacemaker.yaml
@@ -22,3 +22,4 @@ resource_registry:
   OS::TripleO::Services::RabbitMQ: ../puppet/services/pacemaker/rabbitmq.yaml
   OS::TripleO::Services::Loadbalancer: ../puppet/services/pacemaker/loadbalancer.yaml
   OS::TripleO::Services::Memcached: ../puppet/services/pacemaker/memcached.yaml
+  OS::TripleO::Services::Redis: ../puppet/services/pacemaker/database/redis.yaml
