--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -138,6 +138,7 @@ resource_registry:
   OS::TripleO::Services::SwiftProxy: puppet/services/swift-proxy.yaml
   OS::TripleO::Services::SaharaApi: puppet/services/sahara-api.yaml
   OS::TripleO::Services::SaharaEngine: puppet/services/sahara-engine.yaml
+  OS::TripleO::Services::Redis: puppet/services/database/redis.yaml
 
 parameter_defaults:
   EnablePackageInstall: false
