Adds memcached as a composable service
Implements: blueprint composable-services-within-roles
Depends-On: Icd504aef7dda144582c286c56c925a78566af72c
Change-Id: I8802c2a0cf1e5fa1a6d1fab5e87f6014bea2f517

--- a/environments/puppet-pacemaker.yaml
+++ b/environments/puppet-pacemaker.yaml
@@ -17,3 +17,4 @@ resource_registry:
   OS::TripleO::Services::NeutronMetadataAgent: ../puppet/services/pacemaker/neutron-metadata.yaml
   OS::TripleO::Services::RabbitMQ: ../puppet/services/pacemaker/rabbitmq.yaml
   OS::TripleO::Services::Loadbalancer: ../puppet/services/pacemaker/loadbalancer.yaml
+  OS::TripleO::Services::Memcached: ../puppet/services/pacemaker/memcached.yaml
