--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -131,6 +131,7 @@ resource_registry:
   OS::TripleO::Services::NeutronMetadataAgent: puppet/services/neutron-metadata.yaml
   OS::TripleO::Services::RabbitMQ: puppet/services/rabbitmq.yaml
   OS::TripleO::Services::Loadbalancer: puppet/services/loadbalancer.yaml
+  OS::TripleO::Services::Memcached: puppet/services/memcached.yaml
 
 parameter_defaults:
   EnablePackageInstall: false
