--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -659,6 +659,7 @@ parameters:
       - OS::TripleO::Services::NeutronMetadataAgent
       - OS::TripleO::Services::RabbitMQ
       - OS::TripleO::Services::Loadbalancer
+      - OS::TripleO::Services::Memcached
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Controllers.
