--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -658,6 +658,7 @@ parameters:
       - OS::TripleO::Services::NeutronL3Agent
       - OS::TripleO::Services::NeutronMetadataAgent
       - OS::TripleO::Services::RabbitMQ
+      - OS::TripleO::Services::Loadbalancer
     description: A list of service resources (configured in the Heat
                  resource_registry) which represent nested stacks
                  for each service that should get installed on the Controllers.
