--- a/docker/compute-post.yaml
+++ b/docker/compute-post.yaml
@@ -173,7 +173,7 @@ resources:
   NovaComputeContainersConfigOVS:
     type: OS::Heat::StructuredConfig
     properties:
-      group: docker-compose
+      group: docker-cmd
       config:
         ovsvswitchd:
           image:
@@ -235,7 +235,7 @@ resources:
   LibvirtContainersConfig:
     type: OS::Heat::StructuredConfig
     properties:
-      group: docker-compose
+      group: docker-cmd
       config:
         computedata:
           image:
@@ -280,7 +280,7 @@ resources:
   NovaComputeContainersConfig:
     type: OS::Heat::StructuredConfig
     properties:
-      group: docker-compose
+      group: docker-cmd
       config:
         neutronovsagent:
           image:
