Ensure manage_service and enabled are false for Pacemaker
We can control the two manage_service and enabled boolean from
the Pacemaker specific template now.

Change-Id: I91a4267f0fc230f63df3333747d28463c7ae55fe

--- a/puppet/services/pacemaker/glance-api.yaml
+++ b/puppet/services/pacemaker/glance-api.yaml
@@ -56,5 +56,7 @@ outputs:
             glance_file_pcmk_fstype: {get_param: GlanceFilePcmkFstype}
             glance_file_pcmk_manage: {get_param: GlanceFilePcmkManage}
             glance_file_pcmk_options: {get_param: GlanceFilePcmkOptions}
+            glance::api::manage_service: false
+            glance::api::enabled: false
       step_config: |
         include ::tripleo::profile::pacemaker::glance
