--- a/puppet/services/pacemaker/keystone.yaml
+++ b/puppet/services/pacemaker/keystone.yaml
@@ -28,7 +28,7 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [KeystoneServiceBase, role_data, config_settings]
-          #-
-          #  custom keystone hiera goes here if we need it!?
+          - keystone::manage_service: false
+            keystone::enabled: false
       step_config: |
         include ::tripleo::profile::pacemaker::keystone
