--- a/puppet/services/pacemaker/neutron-dhcp.yaml
+++ b/puppet/services/pacemaker/neutron-dhcp.yaml
@@ -29,5 +29,7 @@ outputs:
         map_merge:
           - get_attr: [NeutronDhcpBase, role_data, config_settings]
           - tripleo::profile::pacemaker::neutron::enable_dhcp: True
+            neutron::agents::dhcp::enabled: false
+            neutron::agents::dhcp::manage_service: false
       step_config: |
         include ::tripleo::profile::pacemaker::neutron::dhcp
