--- a/puppet/services/pacemaker/glance-registry.yaml
+++ b/puppet/services/pacemaker/glance-registry.yaml
@@ -26,7 +26,10 @@ outputs:
     description: Role data for the Glance role.
     value:
       config_settings:
-        get_attr: [GlanceRegistryBase, role_data, config_settings]
+        map_merge:
+          - get_attr: [GlanceRegistryBase, role_data, config_settings]
+          - glance::registry::manage_service: false
+            glance::registry::enabled: false
       # No puppet manifests since glance-registry is included in
       # ::tripleo::profile::pacemaker::glance which is maintained alongside of
       # pacemaker/glance-api.yaml.
