Set nova neutron auth back to 'v3password'.
Puppet-nova recently changed the default neutron auth setting
in I3416ae594e972e40ff0336779258a887987e46b1 to 'password'.

This single setting seems to break the tripleo upgrades job.

Setting it here manually for now and following up in puppet-nova.

Closes-bug: #1580076

Change-Id: I3f38a3e1ef3378a272a51ecbc1e8a801c8d3608a

--- a/puppet/hieradata/compute.yaml
+++ b/puppet/hieradata/compute.yaml
@@ -11,6 +11,8 @@ nova::compute::libvirt::migration_support: true
 
 nova::compute::rbd::libvirt_rbd_secret_uuid: "%{hiera('ceph::profile::params::fsid')}"
 
+nova::network::neutron::neutron_auth_type: 'v3password'
+
 # Changing the default from 512MB. The current templates can not deploy
 # overclouds with swap. On an idle compute node, we see ~1024MB of RAM
 # used. 2048 is suggested to account for other possible operations for
