Dump IPs configuration as hieradata
This might be useful if we switch to %{hiera()} calls to lookup
the bind address from within a service.

Also gets rid of NetIpSubnetMap and provides same output from
NetIpMap instead.

Change-Id: I328a417d1f1fff9c31e9ad7b2b5083ac19bc7329

--- a/network/ports/net_ip_map.yaml
+++ b/network/ports/net_ip_map.yaml
@@ -4,7 +4,14 @@ parameters:
   ControlPlaneIp:
     default: ''
     type: string
+  ControlPlaneSubnetCidr: # Override this via parameter_defaults
+    default: '24'
+    description: The subnet CIDR of the control plane network.
+    type: string
   ExternalIp:
+    default: ''
+    type: string
+  ExternalIpSubnet:
     default: ''
     type: string
   ExternalIpUri:
@@ -14,11 +21,17 @@ parameters:
   InternalApiIp:
     default: ''
     type: string
+  InternalApiIpSubnet:
+    default: ''
+    type: string
   InternalApiIpUri:
     default: ''
     type: string
     description: IP address with brackets in case of IPv6
   StorageIp:
+    default: ''
+    type: string
+  StorageIpSubnet:
     default: ''
     type: string
   StorageIpUri:
@@ -28,6 +41,9 @@ parameters:
   StorageMgmtIp:
     default: ''
     type: string
+  StorageMgmtIpSubnet:
+    default: ''
+    type: string
   StorageMgmtIpUri:
     default: ''
     type: string
@@ -35,11 +51,17 @@ parameters:
   TenantIp:
     default: ''
     type: string
+  TenantIpSubnet:
+    default: ''
+    type: string
   TenantIpUri:
     default: ''
     type: string
     description: IP address with brackets in case of IPv6
   ManagementIp:
+    default: ''
+    type: string
+  ManagementIpSubnet:
     default: ''
     type: string
   ManagementIpUri:
@@ -60,9 +82,26 @@ outputs:
       storage_mgmt: {get_param: StorageMgmtIp}
       tenant: {get_param: TenantIp}
       management: {get_param: ManagementIp}
+  net_ip_subnet_map:
+    description: >
+      A Hash containing a mapping of network names to assigned IPs/CIDR
+      for a specific machine.
+    value:
+      ctlplane:
+        list_join:
+          - ''
+          - - {get_param: ControlPlaneIp}
+            - '/'
+            - {get_param: ControlPlaneSubnetCidr}
+      external: {get_param: ExternalIpSubnet}
+      internal_api: {get_param: InternalApiIpSubnet}
+      storage: {get_param: StorageIpSubnet}
+      storage_mgmt: {get_param: StorageMgmtIpSubnet}
+      tenant: {get_param: TenantIpSubnet}
+      management: {get_param: ManagementIpSubnet}
   net_ip_uri_map:
     description: >
-      A Hash containing a mapping of netowrk names to assigned IPs for a
+      A Hash containing a mapping of network names to assigned IPs for a
       specific machine with brackets around IPv6 addresses for use in URLs.
     value:
       ctlplane: {get_param: ControlPlaneIp}
